# antivirus-scanner

./: CMakeLists.txt  test.txt
include/: scanner.h  signatures.h
src/: main.cpp  scanner.cpp  signatures.cpp
tests/: test_scanner.cpp
